error page added and intersector calibrated

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
             <!-- LINKS LIST -->
             <ul class="nav__list">
-                <li class="nav__item"><a href="#about" class="nav__link ">about</a></li>
-                <li class="nav__item"><a href="#projects" class="nav__link ">projects</a></li>
-                <li class="nav__item"><a href="#skills" class="nav__link ">skills</a></li>
-                <li class="nav__item"><a href="#contact" class="nav__link ">contact</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link" data-page="about">about</a></li>
+                <li class="nav__item"><a href="#projects" class="nav__link" data-page="projects">projects</a></li>
+                <li class="nav__item"><a href="#skills" class="nav__link" data-page="skills">skills</a></li>
+                <li class="nav__item"><a href="#contact" class="nav__link" data-page="footer">contact</a></li>
             </ul>
             <!-- TOGGLER -->
             <div class="nav__toggler">
@@ -67,7 +67,7 @@
 
 
         <!-- ABOUT  -->
-        <section class="about" id="about">
+        <section class="about" id="about" >
             <div class="section__title title-color--salsa" >who is this guy</div>
             <div class="about-box">
                 <div class="hex-shape about-box__item about-box__item--1"><span> software developer </span></div>
@@ -429,7 +429,7 @@
         </section>
 
         <!-- SKILLS  -->
-        <section class="skills" id="skills">
+        <section class="skills" id="skills" >
             <div class="section__title title-color--salsa" >my Skills</div>
             <div class="skills__box">
                 <div class="skills__content">
@@ -616,7 +616,7 @@
         </section>
 
         <!-- FOOTER  -->
-        <footer class="footer" id="contact">
+        <section class="footer" id="contact" >
             <!-- FORM  -->
             <div class="form-container">
                 <!-- FOOTER TITLE  -->
@@ -671,7 +671,7 @@
                 <div class="social__copyright">&copy; copyright 2020, Alejandro Rivera, All rights reserved.</div>
             </div>
                   
-        </footer>
+        </section>
 
 
 
