project cards updated and phone view optimized

--- a/index.html
+++ b/index.html
@@ -92,6 +92,47 @@
                     <!-- CARD FRONT  -->
                     <div class="card__side card__side--front">
                         <div class="card__image card__image--1"> &nbsp; </div>
+                        <div class="card__title">FoodTime</div>
+                        <span class="tab tab--lower"></span>
+                    </div>
+                    <!-- CARD BACK   -->
+                    <div class="card__side card__side--back">
+                        <span class="tab tab--upper"></span>
+                        <div class="project__description">
+                            <div class="project__description--top">
+                                I had loads of fun building this project. 
+                                It is a web application but I also did my best to give it a mobile app-like feeling.
+                                (go on try it on your phone) It's fully responsive and in the brains of this web app. 
+                                I built it only using vanilla JS using The Model-View-Controller (MVC) architectural pattern.  
+                                <br>Powered by <a href="https://spoonacular.com/food-api/" target="blank">spoonacular.com</a> 
+                            </div>
+                            <div class="project__description--bottom">
+                                <svg class="project__icon">
+                                    <use xlink:href="img/svg/sprite.svg#icon-html5"></use>
+                                </svg>
+                                <svg class="project__icon">
+                                    <use xlink:href="img/svg/sprite.svg#icon-javascript"></use>
+                                </svg>
+                                <svg class="project__icon">
+                                    <use xlink:href="img/svg/sprite.svg#icon-sass"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="project__btn-box">
+                            <a href="./projects/foodTime/" class="btn project__btn" target="blank">
+                                <svg>
+                                    <rect></rect>
+                                </svg>
+                                View
+                            </a>
+                        </div>
+                        <span class="tab tab--lower"></span>
+                    </div>
+                </div>
+                <div class="card">
+                    <!-- CARD FRONT  -->
+                    <div class="card__side card__side--front">
+                        <div class="card__image card__image--2"> &nbsp; </div>
                         <div class="card__title">Tracking App</div>
                         <span class="tab tab--lower"></span>
                     </div>
@@ -134,7 +175,7 @@
                 <div class="card">
                     <!-- CARD FRONT  -->
                     <div class="card__side card__side--front">
-                        <div class="card__image card__image--1"> &nbsp; </div>
+                        <div class="card__image card__image--3"> &nbsp; </div>
                         <div class="card__title">Simon Game</div>
                         <span class="tab tab--lower"></span>
                     </div>
@@ -173,7 +214,7 @@
                 <div class="card">
                     <!-- CARD FRONT  -->
                     <div class="card__side card__side--front">
-                        <div class="card__image card__image--1"> &nbsp; </div>
+                        <div class="card__image card__image--4"> &nbsp; </div>
                         <div class="card__title">Shopping list</div>
                         <span class="tab tab--lower"></span>
                     </div>
@@ -216,7 +257,7 @@
                 <div class="card">
                     <!-- CARD FRONT  -->
                     <div class="card__side card__side--front">
-                        <div class="card__image card__image--1"> &nbsp; </div>
+                        <div class="card__image card__image--5"> &nbsp; </div>
                         <div class="card__title">Natours</div>
                         <span class="tab tab--lower"></span>
                     </div>
@@ -257,7 +298,7 @@
                 <div class="card">
                     <!-- CARD FRONT  -->
                     <div class="card__side card__side--front">
-                        <div class="card__image card__image--1"> &nbsp; </div>
+                        <div class="card__image card__image--6"> &nbsp; </div>
                         <div class="card__title">Travel Agency</div>
                         <span class="tab tab--lower"></span>
                     </div>
@@ -297,7 +338,7 @@
                 <div class="card">
                     <!-- CARD FRONT  -->
                     <div class="card__side card__side--front">
-                        <div class="card__image card__image--1"> &nbsp; </div>
+                        <div class="card__image card__image--7"> &nbsp; </div>
                         <div class="card__title">Fancy House</div>
                         <span class="tab tab--lower"></span>
                     </div>
@@ -339,7 +380,7 @@
                 <div class="card">
                     <!-- CARD FRONT  -->
                     <div class="card__side card__side--front">
-                        <div class="card__image card__image--1"> &nbsp; </div>
+                        <div class="card__image card__image--8"> &nbsp; </div>
                         <div class="card__title">budget app</div>
                         <span class="tab tab--lower"></span>
                     </div>
@@ -380,7 +421,7 @@
                 <div class="card">
                     <!-- CARD FRONT  -->
                     <div class="card__side card__side--front">
-                        <div class="card__image card__image--1"> &nbsp; </div>
+                        <div class="card__image card__image--9"> &nbsp; </div>
                         <div class="card__title">KQR tags</div>
                         <span class="tab tab--lower"></span>
                     </div>
@@ -410,7 +451,7 @@
                             </div>
                         </div>
                         <div class="project__btn-box">
-                            <a href="https://kqrtags.000webhostapp.com" class="btn project__btn" target="blank">
+                            <a href="https://github.com/alexuko/KQRtags_website" class="btn project__btn" target="blank">
                                 <svg>
                                     <rect></rect>
                                 </svg>
